tests/ui/main_macro/pass/start_before.rs
use chronographer::main;

#[main(start_before)]
async fn main(sched: MyScheduler) {}