tests/ui/main_macro/fail/no_scheduler.rs
use chronographer::main;

#[main]
async fn main() {}